# bzlmodRio-phoenix

./: MODULE.bazel  README.md  WORKSPACE  maven_cpp_deps.bzl  maven_java_deps.bzl
.github/workflows/: auto_update.yml  build.yml  publish.yml
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_ctre_dependencies.py  get_phoenix_dependencies.py  get_version.py  publish.py  vendor_dep.json
libraries/cpp/api-cpp/: BUILD.bazel
libraries/cpp/wpiapi-cpp/: BUILD.bazel
libraries/java/api-java/: BUILD.bazel
libraries/java/wpiapi-java/: BUILD.bazel
private/cpp/api-cpp/: BUILD.bazel  shared.BUILD.bazel
private/cpp/api-cpp-sim/: BUILD.bazel  shared.BUILD.bazel
private/cpp/cci/: BUILD.bazel
private/cpp/cci-sim/: BUILD.bazel
private/cpp/simCANCoder/: BUILD.bazel
private/cpp/simPigeonIMU/: BUILD.bazel
private/cpp/simProCANcoder/: BUILD.bazel
private/cpp/simProPigeon2/: BUILD.bazel
private/cpp/simProTalonFX/: BUILD.bazel
private/cpp/simTalonFX/: BUILD.bazel
private/cpp/simTalonSRX/: BUILD.bazel
private/cpp/simVictorSPX/: BUILD.bazel
private/cpp/tools/: BUILD.bazel
private/cpp/tools-sim/: BUILD.bazel
private/cpp/wpiapi-cpp/: BUILD.bazel
private/cpp/wpiapi-cpp-sim/: BUILD.bazel
private/non_bzlmod_dependencies/: download_dependencies.bzl  setup_dependencies.bzl
tests/: .bazelrc  MODULE.bazel  WORKSPACE
tests/cpp/api-cpp/: BUILD.bazel  main.cpp  test.cpp
tests/cpp/wpiapi-cpp/: BUILD.bazel  main.cpp  test.cpp
tests/java/api-java/: BUILD.bazel  BasicTest.java  Main.java
tests/java/apijava/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpiapi-java/: BUILD.bazel  BasicTest.java  Main.java
tests/java/wpiapijava/: BUILD.bazel  BasicTest.java  Main.java
tests/robot-cpp/: robot.cpp
tests/robot-cpp/subsystems/: BUILD  drivetrain.cpp  drivetrain.hpp  elevator.cpp  elevator.hpp  shooter.cpp  shooter.hpp
tests/robot-java/src/main/java/frc/robot/subsystems/: BUILD  DriveTrain.java  Elevator.java  Shooter.java
