module(
    name = "bzlmodrio-phoenix-gentool",
)

bazel_dep(name = "rules_python", version = "0.21.0")
bazel_dep(name = "bzlmodrio-gentool", version = "")
bazel_dep(name = "bzlmodrio-allwpilib-gentool", version = "")
bazel_dep(name = "bzlmodrio-phoenix6-gentool", version = "")

local_path_override(
    module_name = "bzlmodrio-gentool",
    path = "../../../gentool",
)

local_path_override(
    module_name = "bzlmodrio-allwpilib-gentool",
    path = "../../bzlmodRio-allwpilib/generate",
)

local_path_override(
    module_name = "bzlmodrio-opencv-gentool",
    path = "../../bzlmodRio-opencv/generate",
)

local_path_override(
    module_name = "bzlmodrio-ni-gentool",
    path = "../../bzlmodRio-ni/generate",
)

local_path_override(
    module_name = "bzlmodrio-phoenix6-gentool",
    path = "../../bzlmodRio-phoenix6/generate",
)
