load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "api-cpp",
    actual = ":shared",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-phoenix6//libraries/cpp/phoenix6-hal:shared",
    ] +
    # Binaries
    select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": [
            "//private/cpp/cci:shared",
            "@bzlmodrio-ni//libraries/cpp/ni:shared",
            "@bzlmodrio-phoenix6//libraries/cpp/api-cpp:shared",
        ],
        "//conditions:default": [
            "//private/cpp/cci-sim:shared",
            "@bzlmodrio-phoenix6//libraries/cpp/api-cpp-sim:shared",
        ],
    }),
)

cc_library(
    name = "jni",
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": [
            "//private/cpp/cci:shared",
            "@bzlmodrio-phoenix6//libraries/cpp/api-cpp:jni",
        ],
        "//conditions:default": [
            "//private/cpp/cci-sim:shared",
            "@bzlmodrio-allwpilib//libraries/cpp/hal:jni",
            "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:jni",
            "@bzlmodrio-phoenix6//libraries/cpp/api-cpp-sim:jni",
        ],
    }),
)
