load("@rules_java//java:defs.bzl", "java_import")

java_import(
    name = "api-java",
    jars = ["@com_ctre_phoenix_api_java//jar:file"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-phoenix//libraries/cpp/api-cpp:jni",
        "@bzlmodrio-phoenix6//libraries/cpp/phoenix6-hal:jni",
    ],
)
