cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-phoenix//:__subpackages__"],
    deps = ["@bazelrio_com_ctre_phoenix_sim_cci-sim_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_ctre_phoenix_sim_cci-sim_windowsx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_ctre_phoenix_sim_cci-sim_linuxx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_ctre_phoenix_sim_cci-sim_osxuniversal//:shared_libs"],
    }),
)
