cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["@bzlmodrio-phoenix//:__subpackages__"],
    deps = ["@bazelrio_com_ctre_phoenix_cci_headers//:headers"] + select({
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@bazelrio_com_ctre_phoenix_cci_linuxathena//:shared_libs"],
    }),
)
