cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-phoenix//:__subpackages__"],
    deps = ["@bazelrio_com_ctre_phoenix_cci_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_ctre_phoenix_cci_windowsx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_ctre_phoenix_cci_linuxx86-64//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_ctre_phoenix_cci_linuxathena//:shared_libs"],
    }),
)
