cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@platforms//:incompatible"],
        "@bazel_tools//src/conditions:darwin": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-phoenix//:__subpackages__"],
    deps = ["@bazelrio_com_ctre_phoenixpro_sim_simvictorspx_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_ctre_phoenixpro_sim_simvictorspx_windowsx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_ctre_phoenixpro_sim_simvictorspx_linuxx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_ctre_phoenixpro_sim_simvictorspx_osxuniversal//:shared_libs"],
    }),
)
