cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["@bzlmodrio-phoenix//:__subpackages__"],
    deps = ["@bazelrio_com_ctre_phoenixpro_sim_tools-sim_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_ctre_phoenixpro_sim_tools-sim_windowsx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_ctre_phoenixpro_sim_tools-sim_linuxx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_ctre_phoenixpro_sim_tools-sim_osxuniversal//:shared_libs"],
    }),
)
