cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    # deps = ["@com_github_google_glog//:glog"],
    deps = ["@bzlmodrio-phoenix//libraries/cpp/wpiapi-cpp"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-phoenix//libraries/cpp/wpiapi-cpp",
        "@googletest//:gtest_main",
    ],
)
