load("//styleguide:cc_styleguide.bzl", "cc_styleguide")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    tags = ["no-sandbox"],
    deps = ["@bzlmodrio-phoenix//libraries/cpp/wpiapi-cpp"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-phoenix//libraries/cpp/wpiapi-cpp",
        "@googletest//:gtest_main",
    ],
)

cc_styleguide(name = "wpiapi-cpp")
