load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_wpi_styleguide//styleguide:cc_styleguide.bzl", "cc_styleguide")

cc_binary(
    name = "main",
    srcs = ["main.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:linux_x86_64": ["-Wno-deprecated-declarations"],
        "//conditions:default": [],
    }),
    tags = ["no-sandbox"],
    deps = ["@bzlmodrio-phoenix//libraries/cpp/wpiapi-cpp"],
)

cc_test(
    name = "test",
    srcs = ["test.cpp"],
    copts = select({
        "@bazel_tools//src/conditions:linux_x86_64": ["-Wno-deprecated-declarations"],
        "//conditions:default": [],
    }),
    tags = [
        "bazelrio-cpp-test",
        "no-sandbox",
    ],
    deps = [
        "@bzlmodrio-phoenix//libraries/cpp/wpiapi-cpp",
        "@googletest//:gtest_main",
    ],
)

cc_styleguide(name = "wpiapi-cpp")
